[package]
name = "fpa_extension"
version = "1.1.0"
authors = ["diwako"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fp_extension_x64"
crate-type = ["cdylib"]

[dependencies]
arma-rs = { git = "https://github.com/BrettMayson/arma-rs", branch = "main" }
chrono = "0.4.19"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
futures = "0.3.1"
rand = "0.8.5"
once_cell = "1.13.0"

[dependencies.mongodb]
version = "2.3.0"
default-features = false
features = ["async-std-runtime"]
